--- a/vp/style.css
+++ b/vp/style.css
@@ -1,21 +1,147 @@
-.bounce {
-    -moz-animation: bounce 2s infinite;
-    -webkit-animation: bounce 2s infinite;
-    animation: bounce 2s infinite;
+body {
+    /** fit background image to screen size without scrolling **/
+    background: url("assets/abstractBG.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: 'Dosis', sans-serif;
 }
 
-@keyframes bounce {
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
-        transform: translateX(0);
-    }
-    40% {
-        transform: translateX(30px);
-    }
-    60% {
-        transform: translateX(15px);
-    }
+.container-fluid {
+    width: 50%;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {}
+
+a:hover {}
+
+a:active {}
+
+.error-text {
+    color: red;
+}
+
+.error-border {
+    border: 2px solid red;
+}
+
+#logo {
+    width: 150px;
+    height: auto;
+}
+
+#profile-header {
+    margin: 5% 0 5% 0;
+    padding: 2% 0 2% 0;
+}
+
+#profile-module {
+    margin-top: 5%;
+    margin-bottom: 2.5%;
+}
+
+#profile-nav {
+    overflow: hidden;
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+#add-entry {
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.btn {
+    width: 200px;
+}
+
+.qna {
+    margin-top: 5%;
+}
+
+.login-signup-title {
+    margin-bottom: 5%;
+}
+
+#profile-module {
+    height: 400px;
+    overflow: scroll;
+}
+
+#login-signup-block,
+#register-block,
+#about-block {
+    margin-top: 2%;
+}
+
+.register-link {
+    margin-top: 3%;
+}
+
+.login-input {
+    margin-bottom: 10%;
+}
+
+.glassmorphic {
+    background: rgba( 255, 255, 255, 0.30);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+    backdrop-filter: blur( 8.0px);
+    -webkit-backdrop-filter: blur( 8.0px);
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18);
+    padding: 5%;
+}
+
+.glassmorphic-nav {
+    background: rgba( 255, 255, 255, 0.30);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+    backdrop-filter: blur( 8.0px);
+    -webkit-backdrop-filter: blur( 8.0px);
+    border: 1px solid rgba( 255, 255, 255, 0.18);
+    padding: 2%;
+    margin-bottom: 3%;
+}
+
+.active {
+    color: blue;
+}
+
+.login-form {
+    width: 75%;
+    margin: auto;
+}
+
+.blockquote-footer {
+    color: blue;
+}
+
+.qotd {
+    margin-top: 3%;
+}
+
+nav ul {
+    padding: 0px;
+    margin: auto;
+    text-align: center;
+    width: 50%;
+}
+
+nav li {
+    list-style-type: none;
+    padding: 0px;
+    display: inline;
+    font-size: 25px;
+}
+
+.suggestions,
+.journal {
+    margin-top: 5%;
 }
